spade-tests/src/snapshots/spade_tests__ast_lowering__negative_stage_index_later.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(x: int<8>) -> int<8> {
    reg;
    reg;
        let a = stage(-5).x;
    reg;
        0
}


error: Reference to negative pipeline stage
  ┌─ testinput:4:17
  │
4 │         let a = stage(-5).x;
  │                 ^^^^^^^^^ This references a negative pipeline stage
  │
  = note: Since this is at stage 2, stage(-5) references stage -3
  = note: Pipeline stages start at 0


